<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        tools:context=".ui.home.HomeFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="Book Your Event!"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="Select option from each section"
            android:textColor="@color/black">

        </TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#CCFFFF"
            app:cardCornerRadius="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Select The Event"
                    android:textColor="#FF3355"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/radio_button_1">

                    <RadioButton
                        android:id="@+id/radio_button_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_1" />

                    <RadioButton
                        android:id="@+id/radio_button_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_2" />

                    <RadioButton
                        android:id="@+id/radio_button_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_3" />

                    <RadioButton
                        android:id="@+id/radio_button_4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_4" />

                    <RadioButton
                        android:id="@+id/radio_button_5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="false"
                        android:text="@string/label_5" />
                </RadioGroup>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFF99"
            app:cardCornerRadius="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="FOOD TYPE"
                    android:textColor="#FF3355"
                    android:textStyle="bold" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/label_6"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_7"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_8"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_9"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:text="@string/label_10"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#CCFFFF"
            app:cardCornerRadius="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Theme The Event"
                    android:textColor="#FF3355"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/radio_button_1">

                    <RadioButton
                        android:id="@+id/radio_button_12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Traditional" />

                    <RadioButton
                        android:id="@+id/radio_button_22"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Modern" />

                    <RadioButton
                        android:id="@+id/radio_button_32"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Mix" />


                </RadioGroup>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#CCFFFF"
            app:cardCornerRadius="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Maximum Capacity OF Event"
                    android:textColor="#FF3355"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content"
                    android:hint="Enter MAX. Attendent"
                    android:theme="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Location"
                    android:textColor="#FF3355"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content"
                    android:hint="Location/Address"
                    android:theme="@style/TextInputLayoutStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Date and Duration"
                    android:textColor="#FF3355"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content"
                    android:hint="Date"
                    android:theme="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Any Remarks"
                    android:textColor="#FF3355"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content"
                    android:hint="Last Name"
                    android:theme="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton

                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="350dp"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:text="See Estimeted Price"
                app:backgroundTint="#00bbff"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="350dp"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:text="BOOK EVENT"
                app:backgroundTint="#FF0000"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>